remove the unnessasery

--- a/websocket/main/CMakeLists.txt
+++ b/websocket/main/CMakeLists.txt
@@ -1,4 +1,2 @@
 idf_component_register(SRCS "websocket.c"
-                    INCLUDE_DIRS "."
-                  EMBED_TXTFILES
-                web/test.html)
+                    INCLUDE_DIRS ".")
